--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "start": "vite",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e": "start-server-and-test start http://localhost:5173 cy:run"
   },
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
+    "cypress": "^14.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -30,6 +35,7 @@
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
     "miragejs": "^0.1.48",
+    "start-server-and-test": "^1.14.0",
     "vite": "^6.1.0",
     "vitest": "^3.0.6"
   }
