--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "start": "vite",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "test:e2e": "start-server-and-test start http://localhost:5173 cy:run"
+    "test:e2e": "start-server-and-test start http://localhost:5173 cy:run",
+    "test:selenium": "npx mocha src/tests/WeatherApplicationSelenium.test.mjs"
   },
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
     "cypress": "^14.0.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "selenium-webdriver": "^4.29.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
